// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationStepModal is disaled with empty values 1`] = `
<Modal>
  <main>
    <h1>
      <FormattedMessage
        id="fragments.configuration.verification_steps_modal.title"
        values={Object {}}
      />
      <p>
        <FormattedMessage
          id="fragments.configuration.verification_steps_modal.subtitle"
          values={Object {}}
        />
      </p>
    </h1>
    <CheckboxGroup
      items={
        Array [
          Object {
            "label": <FormattedMessage
              id="verification_items.passport"
              values={Object {}}
            />,
            "value": "passport",
          },
          Object {
            "label": <FormattedMessage
              id="verification_items.national-id"
              values={Object {}}
            />,
            "value": "national-id",
          },
        ]
      }
      onChange={[Function]}
      values={Array []}
    />
  </main>
  <footer
    className="mgi-items"
  >
    <Button
      buttonStyle="primary"
      disabled={true}
      onClick={[Function]}
    >
      <FormattedMessage
        id="done"
        values={Object {}}
      />
    </Button>
  </footer>
</Modal>
`;

exports[`VerificationStepModal is enabled and has pre-checked values 1`] = `
<Modal>
  <main>
    <h1>
      <FormattedMessage
        id="fragments.configuration.verification_steps_modal.title"
        values={Object {}}
      />
      <p>
        <FormattedMessage
          id="fragments.configuration.verification_steps_modal.subtitle"
          values={Object {}}
        />
      </p>
    </h1>
    <CheckboxGroup
      items={
        Array [
          Object {
            "label": <FormattedMessage
              id="verification_items.passport"
              values={Object {}}
            />,
            "value": "passport",
          },
          Object {
            "label": <FormattedMessage
              id="verification_items.national-id"
              values={Object {}}
            />,
            "value": "national-id",
          },
        ]
      }
      onChange={[Function]}
      values={
        Array [
          "national-id",
        ]
      }
    />
  </main>
  <footer
    className="mgi-items"
  >
    <Button
      buttonStyle="primary"
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        id="done"
        values={Object {}}
      />
    </Button>
  </footer>
</Modal>
`;
